java.net migration broke visualvm website on Chrome and IE 10 - we need to change http://visualvm.java.net to https://visualvm.java.net
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3208 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/download.html
+++ b/www/download.html
@@ -3,8 +3,8 @@
     
     <title>Download</title>
 
-    <link rel="stylesheet" type="text/css" href="http://visualvm.java.net/shadowbox/shadowbox.css">
-    <script type="text/javascript" src="http://visualvm.java.net/shadowbox/shadowbox.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://visualvm.java.net/shadowbox/shadowbox.css">
+    <script type="text/javascript" src="https://visualvm.java.net/shadowbox/shadowbox.js"></script>
     <script type="text/javascript">
     Shadowbox.init();
     </script>
@@ -40,7 +40,7 @@
             <h1>Download</h1>
             
             <p>
-                VisualVM is available in two distributions: <b>VisualVM</b> available at <a href="http://visualvm.java.net">visualvm.java.net</a> and
+                VisualVM is available in two distributions: <b>VisualVM</b> available at <a href="https://visualvm.java.net">visualvm.java.net</a> and
                 <b>Java VisualVM</b> available as a JDK tool in Oracle/Sun JDK distributions starting from JDK 6 update 7 and Apple's Java for Mac OS X 10.5 Update 4
                 (see the <a href="releases.html">Releases Overview</a> page). The Java VisualVM is a stable tool tested with each JDK distribution, latest JDK
                 update from Oracle including Java VisualVM can be downloaded <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>. VisualVM available on
