--- a/www/features.html
+++ b/www/features.html
@@ -33,9 +33,9 @@
 
     </style>
 
-    <link rel="stylesheet" type="text/css" href="http://visualvm.java.net/shadowbox/shadowbox.css">
-    <script type="text/javascript" src="http://visualvm.java.net/shadowbox/shadowbox.js"></script>
-    <script type="text/javascript" src="http://visualvm.java.net/js/screenshots.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://visualvm.java.net/shadowbox/shadowbox.css">
+    <script type="text/javascript" src="https://visualvm.java.net/shadowbox/shadowbox.js"></script>
+    <script type="text/javascript" src="https://visualvm.java.net/js/screenshots.js"></script>
     <script type="text/javascript">
       Shadowbox.init();
     </script>
@@ -135,7 +135,7 @@
                 </p>
                 
                 <p style="margin-bottom: 10px;">
-                    If you need a special feature or support for a proprietary tool, you can implement your own plugin. It's easy and there is plenty of information and sample code available for both the NetBeans Platform and VisualVM APIs. A good place to start is the <a href="http://visualvm.java.net/api-quickstart.html">Developer Documentation</a> page.
+                    If you need a special feature or support for a proprietary tool, you can implement your own plugin. It's easy and there is plenty of information and sample code available for both the NetBeans Platform and VisualVM APIs. A good place to start is the <a href="https://visualvm.java.net/api-quickstart.html">Developer Documentation</a> page.
                 </p>
             </div>
 
@@ -152,7 +152,7 @@
                 </p>
 
                 <!--p style="margin-bottom: 10px;">
-                    If you need a special feature or support for a proprietary tool, you can implement your own plugin. It's easy and there is plenty of information and sample code available for both the NetBeans Platform and VisualVM APIs. A good place to start is the <a href="http://visualvm.java.net/api-quickstart.html">Developer Documentation</a> page.
+                    If you need a special feature or support for a proprietary tool, you can implement your own plugin. It's easy and there is plenty of information and sample code available for both the NetBeans Platform and VisualVM APIs. A good place to start is the <a href="https://visualvm.java.net/api-quickstart.html">Developer Documentation</a> page.
                 </p-->
             </div>
             
