--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -29,7 +29,7 @@
         
         <h3>Installing VisualVM</h3>
         <ul>
-            <li>Download the VisualVM installer from the <a href="http://visualvm.java.net/">VisualVM project page</a>.</li>
+            <li>Download the VisualVM installer from the <a href="https://visualvm.java.net/">VisualVM project page</a>.</li>
             <li>Extract the VisualVM installer to an empty directory on your local system.</li>
         </ul>
         
@@ -164,7 +164,7 @@
         easily explore information about Java applications running on local and remote JVMs. 
         For more detailed information about working with VisualVM features, see the following documents:</p>
         <ul>
-            <li><a href="http://visualvm.java.net/docindex.html">VisualVM Documentation and Resources</a>.</li>
+            <li><a href="https://visualvm.java.net/docindex.html">VisualVM Documentation and Resources</a>.</li>
         </ul>
     </body>
 </html>
