--- a/www/index.html
+++ b/www/index.html
@@ -5,9 +5,9 @@
 
         <link rel="stylesheet" type="text/css" href="css/index.css"/>
 
-        <link rel="stylesheet" type="text/css" href="http://visualvm.java.net/shadowbox/shadowbox.css">
-        <script type="text/javascript" src="http://visualvm.java.net/shadowbox/shadowbox.js"></script>
-        <script type="text/javascript" src="http://visualvm.java.net/js/screenshots.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://visualvm.java.net/shadowbox/shadowbox.css">
+        <script type="text/javascript" src="https://visualvm.java.net/shadowbox/shadowbox.js"></script>
+        <script type="text/javascript" src="https://visualvm.java.net/js/screenshots.js"></script>
 
         <script type="text/javascript" src="js/index.js"></script>
 
