--- a/www/ja/gettingstarted.html
+++ b/www/ja/gettingstarted.html
@@ -20,7 +20,7 @@
 
         <h3>VisualVM のインストール</h3>
         <ol>
-            <li><a href="http://visualvm.java.net/">VisualVM のプロジェクトページ</a>から VisualVM のインストーラをダウンロードします。</li>
+            <li><a href="https://visualvm.java.net/">VisualVM のプロジェクトページ</a>から VisualVM のインストーラをダウンロードします。</li>
             <li>VisualVM インストーラをローカルシステムに抽出します。</li>
             <li>VisualVM のインストールディレクトリの <tt>bin</tt> ディレクトリに移動し、アプリケーションを起動します。</li>
         </ol>
@@ -117,7 +117,7 @@
         <h2>その他の VisualVM ドキュメント</h2>
         <p>このドキュメントでは、VisualVM の一部の機能を紹介しています。VisualVM は、直感的なビジュアルインタフェースとして設計されており、ローカルおよびリモートの JVM で実行中の Java アプリケーションに関する情報を簡単に調査できます。VisualVM の機能の操作の詳細については、次のドキュメントを参照してください。</p>
         <ul>
-            <li><a href="http://visualvm.java.net/docindex.html">VisualVM のドキュメントおよびリソース</a></li>
+            <li><a href="https://visualvm.java.net/docindex.html">VisualVM のドキュメントおよびリソース</a></li>
         </ul>
     </body>
 </html>
