--- a/www/ko_KR/gettingstarted.html
+++ b/www/ko_KR/gettingstarted.html
@@ -24,7 +24,7 @@
 
     <h3>VisualVM 설치</h3>
     <ol>
-        <li><a href="http://visualvm.java.net/">VisualVM 프로젝트 페이지</a>에서 인스톨러를 다운로드한다. </li>
+        <li><a href="https://visualvm.java.net/">VisualVM 프로젝트 페이지</a>에서 인스톨러를 다운로드한다. </li>
         <li>로컬 시스템에서 VisualVM 인스톨러를 압축해제한다. </li>
         <li>VisualVM 설치 디렉터리의 <tt>bin</tt>디렉터리로 이동해서 애플리케이션을 실행한다. </li>
     </ol>    
