--- a/www/plugins.html
+++ b/www/plugins.html
@@ -40,8 +40,8 @@
             
         </style>
 
-        <link rel="stylesheet" type="text/css" href="http://visualvm.java.net/shadowbox/shadowbox.css">
-        <script type="text/javascript" src="http://visualvm.java.net/shadowbox/shadowbox.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://visualvm.java.net/shadowbox/shadowbox.css">
+        <script type="text/javascript" src="https://visualvm.java.net/shadowbox/shadowbox.js"></script>
         <script type="text/javascript">
         Shadowbox.init();
         </script>
