--- a/www/api-charts.html
+++ b/www/api-charts.html
@@ -300,8 +300,8 @@
             <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=2">Request a Feature</a>
             <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=1">Report a Bug</a>
             <a href="mailto:feedback@visualvm.java.net">Send Feedback</a>
-            <a href="http://visualvm.java.net/api-quickstart.html">Developer Documentation</a>
-            <a href="http://visualvm.java.net/nonav/apidocs/13/index.html">API Documentation</a>
+            <a href="https://visualvm.java.net/api-quickstart.html">Developer Documentation</a>
+            <a href="https://visualvm.java.net/nonav/apidocs/13/index.html">API Documentation</a>
         </div>
         
     </div>
