blogs.sun.com -> blogs.oracle.com
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3230 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -279,7 +279,7 @@
             when the plugin is installed into VisualVM. Here's where you'll find the wizard 
             in the New File dialog:
             
-            <p><p><img src="http://blogs.sun.com/geertjan/resource/extend-visualvm-5.png" border="1"/>
+            <p><p><img src="https://blogs.oracle.com/geertjan/resource/extend-visualvm-5.png" border="1"/>
             
             <p><li>Once you've completed the wizard, implement the <tt>ModuleInstall.restored</tt> 
             method and the <tt>ModuleInstall.uninstalled</tt> methods as follows:
@@ -676,29 +676,29 @@ public void uninstalled() {
                 <p>The relevant
                 blog entries are as follows:
                 <p><ul>
-                    <li><b><a href="http://blogs.sun.com/geertjan/entry/getting_started_extending_visualvm"> Getting Started Extending VisualVM (Part 1)</a>.</b>
+                    <li><b><a href="https://blogs.oracle.com/geertjan/entry/getting_started_extending_visualvm"> Getting Started Extending VisualVM (Part 1)</a>.</b>
                     Here you create your first tab extension. You discover that VisualVM
                     tabs are broken down into master views, master view configurations,
                     and detail views. That blog entry is reproduced in the "Hello World"
                     section of this tutorial.
-                    <li><b><a href="http://blogs.sun.com/geertjan/entry/getting_started_extending_visualvm_part">Getting Started Extending VisualVM (Part 2)</a>.</b>
+                    <li><b><a href="https://blogs.oracle.com/geertjan/entry/getting_started_extending_visualvm_part">Getting Started Extending VisualVM (Part 2)</a>.</b>
                     Here you create an application type extension, with a subtab
                     extension within the Overview tab and a menu extension, both specifically 
                     for the application type.
-                    <li><b><a href="http://blogs.sun.com/geertjan/entry/getting_started_extending_visualvm_part1">Getting Started Extending VisualVM (Part 3)</a>.</b>
+                    <li><b><a href="https://blogs.oracle.com/geertjan/entry/getting_started_extending_visualvm_part1">Getting Started Extending VisualVM (Part 3)</a>.</b>
                     Here you are introduced to application type subnodes and you
                     are referred to the GlassFish plugin for related source code.
-                    <li><b><a href="http://blogs.sun.com/geertjan/entry/getting_started_extending_visualvm_part2">Getting Started Extending VisualVM (Part 4)</a>.</b>
+                    <li><b><a href="https://blogs.oracle.com/geertjan/entry/getting_started_extending_visualvm_part2">Getting Started Extending VisualVM (Part 4)</a>.</b>
                     Here the extendability of the "Overview" tab, "Monitor" tab, and "Threads" tab
                     are highlighted. In addition, you are shown how to make your own tabs
                     extendable.
-                    <li><b><a href="http://blogs.sun.com/geertjan/entry/getting_started_extending_visualvm_part3">Getting Started Extending VisualVM (Part 5)</a>.</b>
+                    <li><b><a href="https://blogs.oracle.com/geertjan/entry/getting_started_extending_visualvm_part3">Getting Started Extending VisualVM (Part 5)</a>.</b>
                     Here the extendability of the "Host" data source is discussed. Code is provided
                     for adding a tab to the Localhost view and a subtab to its Overview tab.
-                    <li><b><a href="http://blogs.sun.com/geertjan/entry/getting_started_extending_visualvm_part4">Getting Started Extending VisualVM (Part 6)</a>.</b>
+                    <li><b><a href="https://blogs.oracle.com/geertjan/entry/getting_started_extending_visualvm_part4">Getting Started Extending VisualVM (Part 6)</a>.</b>
                     Here you learn a lot about the primary actors of VisualVM&#8212;data sources. In addition, you are
                     shown all the code that you need for creating your own data source.
-                    <li><b><a href="http://blogs.sun.com/geertjan/entry/comparing_data_sources_in_visualvm">Getting Started Extending VisualVM (Part 7)</a>.</b>
+                    <li><b><a href="https://blogs.oracle.com/geertjan/entry/comparing_data_sources_in_visualvm">Getting Started Extending VisualVM (Part 7)</a>.</b>
                     Here you find out how to create a tab for comparing data from multiple instances of the same data source type.
                     In this case, the tab contains the system properties (or JVM arguments)
                     of all the running Java applications, at the same time.
