--- a/www/news.html
+++ b/www/news.html
@@ -220,7 +220,7 @@
                 <p><span class="news_date">May 25th, 2009:</span> Java ME Profiler Snapshot Viewer module published
                     on the Plugin Center for VisualVM 1.1 and VisualVM 1.1.1. It allows to display and browse performance
                     snapshots created by the Java ME SDK 3.0. Details about the plugin are available
-                <a href="http://blogs.sun.com/javamesdk/entry/visualvm_understands_java_me_profiler">here</a>.
+                <a href="https://blogs.oracle.com/javamesdk/entry/visualvm_understands_java_me_profiler">here</a>.
                 </p>
 
                 <p><span class="news_date">April 23rd, 2009:</span> Java VisualVM Blogging Contest has been started at
