--- a/www/plugins.html
+++ b/www/plugins.html
@@ -257,7 +257,7 @@
                     </li>
                 </ul>
                 
-                <p style="margin-bottom: 15px;">A lot of information and sample VisualVM plugins is available on <a href="http://blogs.sun.com/geertjan">Geertjan's Blog</a> (blog by Geertjan Wielenga).
+                <p style="margin-bottom: 15px;">A lot of information and sample VisualVM plugins is available on <a href="https://blogs.oracle.com/geertjan">Geertjan's Blog</a> (blog by Geertjan Wielenga).
                 You may send your questions and get assistance on <a href="mailto:users@visualvm.java.net">users@visualvm.java.net</a> mailing list (you need to be registered to access the mailing list).
                 </p>
             </div>
