--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -117,7 +117,7 @@
             <p><b>Description:&nbsp;</b>No running applications are shown in Applications tree, an exception is thrown after VisualVM startup (<code>java.lang.NullPointerException at JvmJvmstatModelProvider.createModelFor(JvmJvmstatModelProvider)</code>).</p>
             <p><b>Resolution:&nbsp;&nbsp;</b>This happens for VisualVM 1.1 and previous releases and for Java VisualVM 6u11 and previous releases when there's at least one Java application
             running on JDK 6 Update 12 on the system (incl. the VisualVM itself). To fix this problem, download and install the latest VisualVM-Extensions plugin from the Plugin Center using
-            Tools -> Plugins. Details can be found in <a href="http://blogs.sun.com/nbprofiler/entry/visualvm_fixed_to_correctly_recognize">this blog post</a>.</p><br>
+            Tools -> Plugins. Details can be found in <a href="https://blogs.oracle.com/nbprofiler/entry/visualvm_fixed_to_correctly_recognize">this blog post</a>.</p><br>
 
             <a name="jpswin"></a>
             <h4>Local Applications Cannot Be Detected (Error Dialog On Startup)</h4>
