--- a/www/releases.html
+++ b/www/releases.html
@@ -94,6 +94,7 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 25</b><br><small style="margin-left: 10px;">Released: June 18th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u25-relnotes-1955741.html">Release Notes</a></small></div>
                                 <div><b>JDK 7 Update 21</b><br><small style="margin-left: 10px;">Released: April 16th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u21-relnotes-1932873.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 7 Update 17</b><br><small style="margin-left: 10px;">Released: March 4th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u17-relnotes-1915289.html">Release Notes</a></small></div>
