--- a/www/download.html
+++ b/www/download.html
@@ -56,9 +56,9 @@
             <a name="download"></a>
             <h3>Download</h3>
             <div style="background: #f0f1f2; padding: 10px; padding-left: 20px; margin-bottom: 10px;">
-                <div><a href="http://java.net/projects/visualvm/downloads/download/release135/visualvm_135.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM 1.3.5</span></a> (.zip, 14.3MB)<span style="margin-left: 15px; margin-right: 15px;">|</span>IDE integration: <a href="eclipse-launcher.html">Eclipse IDE</a></div>
-                <div style="padding-top: 5px;"><small><a href="http://java.net/projects/visualvm/downloads/download/release135/visualvm_135-ml.zip"><b>Multi-language</b></a> (.zip, 18.4MB, English / Japanese <img src="ja/images/japanese.png" style="border: 0px; vertical-align: bottom;"/> / Chinese <img src="zh_CN/images/simplified_chinese.png" style="border: 0px; vertical-align: bottom;"/>)</small></div>
-                <div><small><a href="http://java.net/projects/visualvm/downloads/download/release135/VisualVM_135.dmg"><b>Mac OS X Application Bundle</b></a> (.dmg, 20.6MB)</small></div>
+                <div><a href="https://java.net/projects/visualvm/downloads/download/release136/visualvm_136.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM 1.3.6</span></a> (.zip, 13.4MB)<span style="margin-left: 15px; margin-right: 15px;">|</span>IDE integration: <a href="eclipse-launcher.html">Eclipse IDE</a></div>
+                <div style="padding-top: 5px;"><small><a href="https://java.net/projects/visualvm/downloads/download/release136/visualvm_136-ml.zip"><b>Multi-language</b></a> (.zip, 17.5MB, English / Japanese <img src="ja/images/japanese.png" style="border: 0px; vertical-align: bottom;"/> / Chinese <img src="zh_CN/images/simplified_chinese.png" style="border: 0px; vertical-align: bottom;"/>)</small></div>
+                <div><small><a href="https://java.net/projects/visualvm/downloads/download/release136/VisualVM_136.dmg"><b>Mac OS X Application Bundle</b></a> (.dmg, 19.7MB)</small></div>
             </div>
             
             <a style="clear: both;" name="first_steps"></a>
