--- a/www/news.html
+++ b/www/news.html
@@ -71,6 +71,11 @@
             <a name="news"></a>
             <h3>News</h3>
             <div id="news">
+                
+                <p><span class="news_date">August 14th, 2012:</span> JDK 7 Update 6 released, it contains Java VisualVM tool
+                    based on VisualVM 1.3.4. Latest JDK 7 update from Oracle can be downloaded
+                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>.
+                </p>
 
                 <p><span class="news_date">April 26th, 2012:</span> JDK 7 Update 4 released, it contains Java VisualVM tool
                     based on VisualVM 1.3.3. Latest JDK 7 update from Oracle can be downloaded
