--- a/www/releases.html
+++ b/www/releases.html
@@ -94,7 +94,7 @@
                             </td>
 
                             <td>
-                                <div>not released yet</div>
+                                <div><b>JDK 7 Update 40</b><br><small style="margin-left: 10px;">Released: September 10th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u40-relnotes-2004172.html">Release Notes</a></small></div>
                             </td>
                         </tr>
                         
