Fixed HTML formatting for docs & build guide
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3270 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <!-- -*- xhtml -*- -->
@@ -21,11 +20,7 @@
                 background-color: #f2f2f2;
             }
 
-            #contents_main {
-            margin-right: 0px !important;
-        }
-
-        #contents_main p {
+        #contents_main_doc p {
             margin: 0px;
             padding: 8px;
             padding-top: 5px;
@@ -33,13 +28,13 @@
             clear: both;
         }
 
-        #contents_main hr {
+        #contents_main_doc hr {
             border: 1px dashed #cccccc;
             border-collapse: collapse;
             clear: both;
         }
 
-        #contents_main p img {
+        #contents_main_doc p img {
             float: left;
             margin-right: 8px;
             margin-bottom: 8px;
@@ -63,7 +58,7 @@
 
   <div id="contents_div">
     <div id="contents_contents">
-        <div id="contents_main">
+        <div id="contents_main_doc">
 
         <h1>Getting Started Extending VisualVM</h1>
         
