--- a/www/applications_local.html
+++ b/www/applications_local.html
@@ -3,6 +3,9 @@
         <title>Working with Local Applications in VisualVM</title>
     </head>
     <body>
+    <div id="contents_div">
+    <div id="contents_contents">
+    <div id="contents_main_doc">
         <h1>Working with Local Applications</h1>
         <hr />
         <p>When you start VisualVM, a node for each local Java application is displayed under the Local node in the Applications window.
@@ -105,5 +108,8 @@
         <hr/>
         <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
 
+    </div>
+    </div>
+    </div>
     </body>
 </html>
