--- a/www/applications_window.html
+++ b/www/applications_window.html
@@ -3,6 +3,9 @@
         <title>Using the Applications Window</title>
     </head>
     <body>
+    <div id="contents_div">
+    <div id="contents_contents">
+    <div id="contents_main_doc">
         <h1>Using the Applications Window</h1>
         <hr />
         <p>When you start VisualVM, the Applications window is visible in the left side of the VisualVM window.
@@ -94,5 +97,8 @@
             <hr/>
             <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
 
+    </div>
+    </div>
+    </div>
     </body>
 </html>
