--- a/www/jconsole_plugin_wrapper_tab.html
+++ b/www/jconsole_plugin_wrapper_tab.html
@@ -1,6 +1,5 @@
 <!-- Copyright (c) 2008, 2011, Oracle and/or its affiliates. All rights reserved.  -->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -13,6 +12,9 @@
 </head>
 
 <body>
+<div id="contents_div">
+<div id="contents_contents">
+<div id="contents_main_doc">
 <h1>JConsole  Plug-in  Wrapper Tab</h1>
 <hr />
 <p> An optional VisualVM plug-in exists that allows you to add any custom tabs that you might have created for the Java platform, Standard Edition (Java SE)  monitoring and management console, JConsole, to VisualVM. Any plug-ins that you built for JConsole can easily be added to VisualVM using the optional JConsole  plug-in wrapper tab. </p>
@@ -45,5 +47,8 @@
 <hr/>
 <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
 
+</div>
+</div>
+</div>
 </body>
 </html>
