--- a/www/jmx_connections.html
+++ b/www/jmx_connections.html
@@ -1,6 +1,5 @@
 <!-- Copyright (c) 2008, 2011, Oracle and/or its affiliates. All rights reserved.  -->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -13,6 +12,9 @@
 </head>
 
 <body>
+<div id="contents_div">
+<div id="contents_contents">
+<div id="contents_main_doc">
 <h1>Connecting to  JMX Agents Explicitly </h1>
 <hr />
 <p>Java Management Extensions (JMX)  technology can be used to monitor and manage any Java technology-based applications (Java applications) that are running in either a local or a remote Java Virtual Machine (JVM). Java applications are automatically exposed for monitoring and management by JMX agents  if they are run on the Java platform, Standard Edition (Java SE platform) version 6. If the Java applications are  running on the Java 2 platform, Standard Edition (J2SE platform) 5.0, you can expose them manually for monitoring and management  by setting the  <span class="style1">com.sun.management.jmxremote.*</span> system properties  when the applications are launched. Setting these system properties, or running your applications on version 6 of the Java SE platform, enables the platform's <em>out-of-the-box</em> monitoring and management capability, automatically enabling the platform MBean server in the JVM software, and registering MBeans in it that expose the application for management by any appropriately configured JMX client application. VisualVM is one such JMX client application. </p>
@@ -90,5 +92,8 @@ JMX agents that are running in a target Java application, a means of creating ex
 <p>&nbsp;</p>
 <hr/>
 <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
+</div>
+</div>
+</div>
 </body>
 </html>
