--- a/www/mbeans_tab.html
+++ b/www/mbeans_tab.html
@@ -1,6 +1,5 @@
 <!-- Copyright (c) 2008, 2011, Oracle and/or its affiliates. All rights reserved.  -->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -13,6 +12,9 @@
 </head>
 
 <body>
+<div id="contents_div">
+<div id="contents_contents">
+<div id="contents_main_doc">
 <h1>MBeans Tab</h1>
 <hr />
 <p> An optional VisualVM plug-in exists that adds   Java Management Extensions (JMX) monitoring and management capabilities to VisualVM. This plug-in is the <em>MBeans</em> <em>tab</em>, which allows you to access all the JMX technology MBeans that are present in a Java Virtual Machine (JVM). This page provides a brief introduction to the JMX technology and to MBeans, and then introduces the VisualVM MBeans tab itself.</p>
@@ -103,5 +105,8 @@ com.sun.example:type=Triangle,side=isosceles,name=3</pre>
 <hr/>
 <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
 
+</div>
+</div>
+</div>
 </body>
 </html>
