--- a/www/profiler.html
+++ b/www/profiler.html
@@ -3,6 +3,9 @@
         <title>Profiling Applications with VisualVM</title>
     </head>
     <body>
+    <div id="contents_div">
+    <div id="contents_contents">
+    <div id="contents_main_doc">
         <h1>Profiling Applications</h1>
         <hr />
         <p>VisualVM presents data for local and remote applications in a tab specific for that application.
@@ -107,5 +110,8 @@
         <hr/>
         <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
 
+    </div>
+    </div>
+    </div>
     </body>
 </html>
