--- a/www/api-faq.html
+++ b/www/api-faq.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <!-- -*- xhtml -*- -->
@@ -13,6 +12,9 @@
         
     </head>
     <body>
+    <div id="contents_div">
+    <div id="contents_contents">
+    <div id="contents_main">
         <h1>VisualVM Developer FAQ</h1>
         
         <p>This is the developer-oriented FAQ for VisualVM. Developer in this context means 
