--- a/www/applications_remote.html
+++ b/www/applications_remote.html
@@ -3,6 +3,9 @@
         <title>Working with Remote Applications</title>
     </head>
     <body>
+    <div id="contents_div">
+    <div id="contents_contents">
+    <div id="contents_main_doc">
         <h1>Working with Remote Applications</h1>
         <hr />
         <p>VisualVM is able to access and display data about applications running on remote hosts.
@@ -58,6 +61,8 @@
         <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
             
             
-
+    </div>
+    </div>
+    </div>
     </body>
 </html>
