--- a/www/build.html
+++ b/www/build.html
@@ -4,6 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 <body>
+<div id="contents_div">
+<div id="contents_contents">
+<div id="contents_main_doc">
 <p>
 Build instructions for the latest stable version <b>VisualVM 1.3.6</b>. If you want to build different version use links below:
 <ul>
@@ -54,5 +57,8 @@ To build the plugins suite, use <code>ant build</code> or <code>ant run</code>. 
 build the zip distribution of the visualvm core tool into release136/visualvm/dist/visualvm.zip and extract
 it into the release136/plugins/visualvm directory. After that the build of the plugins suite continues to
 build each of the individual plugins.</p>
+</div>
+</div>
+</div>
 </body>
 </html>
