--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -3,6 +3,9 @@
         <title>Getting Started with VisualVM</title>
     </head>
     <body>
+    <div id="contents_div">
+    <div id="contents_contents">
+    <div id="contents_main_doc">
         <h1>Getting Started with VisualVM</h1>
         <hr>
 
@@ -166,5 +169,8 @@
         <ul>
             <li><a href="https://visualvm.java.net/docindex.html">VisualVM Documentation and Resources</a>.</li>
         </ul>
+    </div>
+    </div>
+    </div>
     </body>
 </html>
