--- a/www/heapdump.html
+++ b/www/heapdump.html
@@ -3,6 +3,10 @@
         <title>Browsing a Heap Dump</title>
     </head>
     <body>
+    <div id="contents_div">
+    <div id="contents_contents">
+    <div id="contents_main_doc">
+
         <h1>Browsing a Heap Dump</h1>
         <hr />
         <p>You can use VisualVM to browse the contents of a heap dump file and quickly see the allocated objects in the heap.
@@ -70,6 +74,8 @@
            <hr/>
             <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
 
-        
+    </div>
+    </div>
+    </div>
     </body>
 </html>
