--- a/www/intro.html
+++ b/www/intro.html
@@ -3,6 +3,9 @@
         <title>Introduction to VisualVM</title>
     </head>
     <body>
+    <div id="contents_div">
+    <div id="contents_contents">
+    <div id="contents_main_doc">
         <h1>Introduction to VisualVM</h1>
         <hr />
 
@@ -106,6 +109,8 @@
         <hr/>
         <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
 
-        
+    </div>
+    </div>
+    </div>
     </body>
 </html>
