--- a/www/oqlhelp.html
+++ b/www/oqlhelp.html
@@ -1,4 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!--
 *     Copyright © 2009 Sun Microsystems, Inc. All rights reserved.
 *     Use is subject to license terms.
@@ -9,6 +8,9 @@
     </head>
     
 <body>
+<div id="contents_div">
+<div id="contents_contents">
+<div id="contents_main_doc">
 <h1>Analyzing a Heap Dump Using Object Query Language (OQL)</h1>
 
 <hr />
@@ -842,6 +844,10 @@ classes may be safe - given that user has the control over the classes.
 
         <hr/>
         <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
+        
+</div>
+</div>
+</div>
 
     </body>
 </html>
