--- a/www/overview_tab.html
+++ b/www/overview_tab.html
@@ -3,6 +3,9 @@
         <title>Viewing Application Overview</title>
     </head>
     <body>
+    <div id="contents_div">
+    <div id="contents_contents">
+    <div id="contents_main_doc">
         <h1>Viewing Application Overview</h1>
         <hr />
         <p>VisualVM presents data for local and remote applications in a tab specific for that application.
@@ -50,6 +53,8 @@
         <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
 
         
-        
+    </div>
+    </div>
+    </div>
     </body>
 </html>
