--- a/www/snapshots.html
+++ b/www/snapshots.html
@@ -3,6 +3,9 @@
         <title>Working with Snapshots in VisualVM</title>
     </head>
     <body>
+    <div id="contents_div">
+    <div id="contents_contents">
+    <div id="contents_main_doc">
         <h1>Working with Snapshots</h1>
         <hr />
         <p>VisualVM enables you to take snapshots of application data and save the snapshots to your local system.
@@ -93,6 +96,8 @@
             <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
 
         
-        
+    </div>
+    </div>
+    </div>
     </body>
 </html>
