--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,12 @@
             <h3>News</h3>
             <div id="news">
                 
+                <p><span class="news_date">November 13th, 2012:</span> VisualVM 1.3.5 released. This release delivers a lot of bugfixes 
+                    and improvements and builds on top of NetBeans Platform 7.2.1. The tool can be
+                    downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release135/visualvm"><code>release135</code></a> branch.
+                </p>
+                
                 <p><span class="news_date">August 14th, 2012:</span> JDK 7 Update 6 released, it contains Java VisualVM tool
                     based on VisualVM 1.3.4. Latest JDK 7 update from Oracle can be downloaded
                     <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>.
