Releasing Startup Profiler Plugin - typo fixed.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3284 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
                 
-                <p><span class="news_date">September 24th, 2012:</span> Startup Profiler plugin has been released on
+                <p><span class="news_date">September 23rd, 2013:</span> Startup Profiler plugin has been released on
                     VisualVM 1.3.6 Plugins Center. Startup Profiler enables profiling startup of local Java 5+
                     applications and helps to profile short-running processes. For detailed description visit the
                     <a href="startupprofiler.html">Startup Profiler plugin page</a>.
