--- a/www/releases.html
+++ b/www/releases.html
@@ -94,6 +94,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 45</b><br><small style="margin-left: 10px;">Released: October 15th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u45-relnotes-2016950.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 7 Update 40</b><br><small style="margin-left: 10px;">Released: September 10th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u40-relnotes-2004172.html">Release Notes</a></small></div>
                             </td>
                         </tr>
