--- a/www/features.html
+++ b/www/features.html
@@ -65,7 +65,7 @@
             <a name="demo"></a>
             <h3>Demo</h3>
             <div style="background: #f0f1f2; padding: 5px; padding-left: 0px; padding-bottom: 0px; margin-bottom: 10px;">
-                <p><a href="http://blip.tv/file/1582849" target="blank" title="VisualVM Screencast."><img src="images/screencast_small.png"/></a><b>See a screencast to discover the most important VisualVM features!</b>
+                <p><a href="http://youtu.be/z8n7Bg7-A4I" target="blank" title="VisualVM Screencast."><img src="images/screencast_small.png"/></a><b>See a screencast to discover the most important VisualVM features!</b>
                 </p>
                 <hr style="border: 0px; padding: 0px; margin: 0px; height: 0px; color: #f0f1f2; visibility: hidden;"><!-- NOTE: the <hr> is a workaround for IE -->
             </div>
