--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -26,7 +26,7 @@
 
         <h3>VisualVM In Action</h3>
         <p>See the VisualVM features in this short screencast:</p>
-        <p><embed src="http://blip.tv/play/AeGPcZKdZQ" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="400" height="330"></embed></p>
+        <p><iframe width="420" height="315" src="//www.youtube-nocookie.com/embed/z8n7Bg7-A4I" frameborder="0" allowfullscreen></iframe></p>
 
         <br>
         
