--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
         <tr>
             <td id="top_div_info">
                 VisualVM is a visual tool integrating several commandline JDK tools and lightweight profiling capabilities. Designed for both production and development time use, it further enhances the capability of monitoring and performance analysis for the Java SE platform.
-                <a href="http://blip.tv/file/1582849" target="blank">See screencast</a>.
+                <a href="http://youtu.be/z8n7Bg7-A4I" target="blank">See screencast</a>.
             </td>
             <td id="top_div_links">
                 <a href="features.html"><img src="images/main_links_icon.png"/>Features</a>
