--- a/www/ja/gettingstarted.html
+++ b/www/ja/gettingstarted.html
@@ -14,7 +14,7 @@
 
         <h3>実行中の VisualVM</h3>
         <p>java.sun.com で紹介された短いスクリーンキャストで、VisualVM の機能を参照してください。</p>
-        <p><embed src="http://blip.tv/play/AeGPcZKdZQ" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="400" height="330"></embed></p>
+        <p><iframe width="420" height="315" src="//www.youtube-nocookie.com/embed/z8n7Bg7-A4I" frameborder="0" allowfullscreen></iframe></p>
 
         <br>
 
