--- a/www/zh_CN/gettingstarted.html
+++ b/www/zh_CN/gettingstarted.html
@@ -14,7 +14,7 @@
 
         <h3>VisualVM 实践</h3>
         <p>以下简短的截屏视频显示了最初在 java.sun.com 中介绍的 VisualVM 功能：</p>
-        <p><embed src="http://blip.tv/play/AeGPcZKdZQ" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="400" height="330"></embed></p>
+        <p><iframe width="420" height="315" src="//www.youtube-nocookie.com/embed/z8n7Bg7-A4I" frameborder="0" allowfullscreen></iframe></p>
 
         <br>
         
