Added Coherence plugin to Plugins page
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3312 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/plugins.html
+++ b/www/plugins.html
@@ -233,9 +233,16 @@
                 
                 <hr/>
 
-                <p style="margin-bottom: 10px;"><a href="images/crash.jpg" rel="lightbox[plugins]" title="CRaSH Plugin."><img src="images/crash_thumb.jpg"/></a><b>CRaSH Plugin.</b>
+                <p><a href="images/crash.jpg" rel="lightbox[plugins]" title="CRaSH Plugin."><img src="images/crash_thumb.jpg"/></a><b>CRaSH Plugin.</b>
                 A plugin to support the CRaSH open source shell for the Java Platform in VisualVM. For detailed description and installation instructions visit the <a href="http://www.crashub.org/#visualvm">plugin page</a>.<br>
                 <i>Available on vendor Plugins Center</i>
+                </p>
+                
+                <hr/>
+
+                <p style="margin-bottom: 10px;"><a href="images/coherence.jpg" rel="lightbox[plugins]" title="Coherence Plugin."><img src="images/coherence_thumb.jpg"/></a><b>Coherence Plugin.</b>
+                Coherence plugin allows developers to view summarized statistics and information when connected to a JMX enabled Coherence cluster. For detailed description and installation instructions visit the <a href="http://coherence-community.github.io/coherence-incubator/12.1.0/jvisualvm/index.html">plugin page</a>.<br>
+                <i>Available on vendor plugin page</i>
                 </p>
 
             </div>
