VisualVM 1.3.7 must run on JDK 7+
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3348 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/relnotes.html
+++ b/www/relnotes.html
@@ -68,7 +68,7 @@
                         <li>Sun Solaris: Intel &amp; Sparc platform, 32bit &amp; 64bit
                         </li>
 
-                        <li>Mac OS X: Intel platform, 32bit &amp; 64bit
+                        <li>Mac OS X: Intel platform, 64bit
                         </li>
 
                         <li>HP-UX 11i: PA-RISC platform, 32bit &amp; 64bit
@@ -79,19 +79,16 @@
                 <p style="margin-bottom: 10px;">
                     <b>Required software:</b><br>
                     <ul>
-                        <li>Oracle/Sun JDK 6+
+                        <li>Oracle JDK 7+
                         </li>
 
-                        <li>OpenJDK 6+
+                        <li>OpenJDK 7+
                         </li>
 
-                        <li>IcedTea 6+
+                        <li>IcedTea 7+
                         </li>
 
-                        <li>Apple JDK 6+
-                        </li>
-
-                        <li>HP-UX JDK 6.0.01+
+                        <li>HP-UX JDK 7.0.x+
                         </li>
                     </ul>
                 </p>
