--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -75,7 +75,7 @@
                 <li><i>The download is broken</i> - make sure you've got the correct bits (archive managers typically notify you when the archive is broken)</li>
                 <li><i>VisualVM waits for license confirmation</i> - make sure you haven't overlooked the License Agreement dialog</li>
                 <li><i>Incorrect JDK is used for running VisualVM</i> - if you haven't defined a JDK to run VisualVM manually, make sure that the
-                default Java on your system is Oracle/Sun JDK 6+</li>
+                default Java on your system is Oracle/Sun JDK 7+ (or JDK 6+ for VisualVM 1.3.6 and previous versions)</li>
                 <li><i>Incorrectly set JDK for running VisualVM</i> - if you have defined a JDK to run VisualVM manually, make sure the path to the JDK is correct and doesn't end with a slash</li>
                 <li><i>Incorrectly set VisualVM user directory</i> - if you have defined VisualVM user directory manually, make sure it is outside of VisualVM installation directory</li>
             </ul>
@@ -100,7 +100,7 @@
             <a name="jrehost"></a>
             <h4>Error Starting VisualVM (Error Dialog During Startup)</h4>
             <p><b>Description:&nbsp;</b>'Error Starting VisualVM' dialog is shown during VisualVM startup with a message about an unsupported version of Java.</p>
-            <p><b>Resolution:&nbsp;&nbsp;</b>VisualVM runs only on JDK 6 or 7 (not the JRE). When started on JRE or incorrect JDK version, VisualVM shows this dialog and terminates. To define which JDK will be used for running VisualVM, follow the steps in
+            <p><b>Resolution:&nbsp;&nbsp;</b>VisualVM runs only on JDK 7+ (or JDK 6+ for VisualVM 1.3.6 and previous versions) - not the JRE! When started on JRE or incorrect JDK version, VisualVM shows this dialog and terminates. To define which JDK will be used for running VisualVM, follow the steps in
             the Starting VisualVM section of the <a href="gettingstarted.html#starting_visualvm">Getting Started with VisualVM</a> document.</p><br>
 
             <a name="cleandir"></a>
@@ -154,7 +154,7 @@
             <p><b>Description:&nbsp;</b>Adding a remote host and/or invoking Properties on an existing host throws <code>java.lang.NullPointerException</code> on Linux/Solaris, new host cannot be added.</p>
             <p><b>Resolution:&nbsp;&nbsp;</b>This happens when running the VisualVM 1.2 or newer on JDK 7 or OpenJDK 6 with GTK LaF. It is caused by a JDK bug introduced in JDK 7 b10. Details are available in
                 <a href="http://java.net/jira/browse/VISUALVM-372">VisualVM bug #372</a>. A quick workaround is to change the look'n'feel using
-                <code>visualvm --laf Nimbus</code> or <code>visualvm --laf Metal</code> or use Sun JDK 6 to run VisualVM.</p><br>
+                <code>visualvm --laf Nimbus</code> or <code>visualvm --laf Metal</code> or use Oracle JDK 7 to run VisualVM.</p><br>
 
             <a name="6u17win"></a>
             <h4>HeapWalker Throws Exceptions When Switching Views</h4>
