--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,11 @@
             <h3>News</h3>
             <div id="news">
                 
+                <p><span class="news_date">September 10th, 2013:</span> JDK 7 Update 40 released, it contains Java VisualVM tool
+                    based on VisualVM 1.3.5. Latest JDK 7 update from Oracle can be downloaded
+                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>.
+                </p>
+                
                 <p><span class="news_date">July 9th, 2013:</span> VisualVM 1.3.6 released. This release delivers a lot of bugfixes 
                     and improvements and builds on top of NetBeans Platform 7.3.1. The tool can be
                     downloaded from the <a href="download.html">Download</a> page, sources are available in
