--- a/www/releases.html
+++ b/www/releases.html
@@ -94,7 +94,7 @@
                             </td>
 
                             <td>
-                                <div>not released yet</div>
+                                <div><b>JDK 8</b><br><small style="margin-left: 10px;">Released: March 18th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/8train-relnotes-latest-2153846.html">Release Notes</a></small></div>
                             </td>
                         </tr>
                                                 
