JDK 8u5 and JDK 7u55 released
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3362 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/releases.html
+++ b/www/releases.html
@@ -94,7 +94,9 @@
                             </td>
 
                             <td>
-                                <div><b>JDK 8</b><br><small style="margin-left: 10px;">Released: March 18th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/8train-relnotes-latest-2153846.html">Release Notes</a></small></div>
+                                <div><b>JDK 8 Update 5</b><br><small style="margin-left: 10px;">Released: April 15th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/8train-relnotes-latest-2153846.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 8</b><br><small style="margin-left: 10px;">Released: March 18th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/8train-relnotes-previous-2179307.html">Release Notes</a></small></div>
                             </td>
                         </tr>
                                                 
@@ -104,6 +106,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 55</b><br><small style="margin-left: 10px;">Released: April 15th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/7u55-relnotes-2177812.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 7 Update 51</b><br><small style="margin-left: 10px;">Released: January 14th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/7u51-relnotes-2085002.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 7 Update 45</b><br><small style="margin-left: 10px;">Released: October 15th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u45-relnotes-2016950.html">Release Notes</a></small></div>
