--- a/www/releases.html
+++ b/www/releases.html
@@ -94,6 +94,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 60</b><br><small style="margin-left: 10px;">Released: May 28th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/7u60-relnotes-2200106.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 8 Update 5</b><br><small style="margin-left: 10px;">Released: April 15th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/8train-relnotes-latest-2153846.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 8</b><br><small style="margin-left: 10px;">Released: March 18th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/8train-relnotes-previous-2179307.html">Release Notes</a></small></div>
