--- a/www/releases.html
+++ b/www/releases.html
@@ -80,7 +80,17 @@
                         
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.3.7</b><br><small style="margin-left: 10px;">Released: January 22nd, 2014, <a href="https://java.net/projects/visualvm/downloads/download/release136/visualvm_137.zip">Download</a> (<a href="https://java.net/projects/visualvm/downloads/download/release136/visualvm_137-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.3.8</b><br><small style="margin-left: 10px;">Released: July 1st, 2014, <a href="https://java.net/projects/visualvm/downloads/download/release138/visualvm_138.zip">Download</a> (<a href="https://java.net/projects/visualvm/downloads/download/release138/visualvm_138-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
+                            </td>
+
+                            <td>
+                                <div>not released yet</div>
+                            </td>
+                        </tr>
+                        
+                        <tr>
+                            <td>
+                                <div><b>VisualVM 1.3.7</b><br><small style="margin-left: 10px;">Released: January 22nd, 2014, <a href="https://java.net/projects/visualvm/downloads/download/release137/visualvm_137.zip">Download</a> (<a href="https://java.net/projects/visualvm/downloads/download/release137/visualvm_137-ml.zip">ml</a>), <a href="relnotes137.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
