--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,12 @@
             <h3>News</h3>
             <div id="news">
                 
+                <p><span class="news_date">September 23rd, 2013:</span> Startup Profiler plugin has been released on
+                    VisualVM 1.3.6 Plugins Center. Startup Profiler enables profiling startup of local Java 5+
+                    applications and helps to profile short-running processes. For detailed description visit the
+                    <a href="startupprofiler.html">Startup Profiler plugin page</a>.
+                </p>
+                
                 <p><span class="news_date">September 10th, 2013:</span> JDK 7 Update 40 released, it contains Java VisualVM tool
                     based on VisualVM 1.3.5. Latest JDK 7 update from Oracle can be downloaded
                     <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>.
