--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
                 
-                <p><span class="news_date">July 1st, 2014:</span> VisualVM 1.3.8 released. This release adds support for JDK9, Linux ARM platform, improves Threads view and adds support for zooming Monitor graphs in Application Snapshots. Now built on NetBeans Platform 8.0. The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in <a href="https://java.net/projects/visualvm/sources/svn/show/branches/release138/visualvm"><code>release138</code></a> branch.
+                <p><span class="news_date">July 1st, 2014:</span> VisualVM 1.3.8 released. This release adds support for JDK9, Linux ARM platform, improves Threads view and adds support for zooming of Monitor graphs in Application Snapshots. Now built on NetBeans Platform 8.0. The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in <a href="https://java.net/projects/visualvm/sources/svn/show/branches/release138/visualvm"><code>release138</code></a> branch.
                 </p>
                 
                 <p><span class="news_date">March 18th, 2014:</span> JDK 8 has been released and is available for download
