JDK 7u65, 7u67, 8u11 and 8u20 released
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3394 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/releases.html
+++ b/www/releases.html
@@ -94,7 +94,7 @@
                             </td>
 
                             <td>
-                                <div>not released yet</div>
+                                <div><b>JDK 8 Update 20</b><br><small style="margin-left: 10px;">Released: Aug 19th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/8u20-relnotes-2257729.html">Release Notes</a></small></div>
                             </td>
                         </tr>
 
@@ -104,6 +104,12 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 67</b><br><small style="margin-left: 10px;">Released: Aug 4th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/7u67-relnotes-2251330.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 7 Update 65</b><br><small style="margin-left: 10px;">Released: Jul 15th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/7u65-relnotes-2229169.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 8 Update 11</b><br><small style="margin-left: 10px;">Released: Jul 15th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/8u11-relnotes-2232915.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 7 Update 60</b><br><small style="margin-left: 10px;">Released: May 28th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/7u60-relnotes-2200106.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 8 Update 5</b><br><small style="margin-left: 10px;">Released: April 15th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/8train-relnotes-latest-2153846.html">Release Notes</a></small></div>
