--- a/www/relnotes.html
+++ b/www/relnotes.html
@@ -176,6 +176,9 @@
             <h3>Known Problems</h3>
             <div>
                 <ul>
+                    <li><a href="https://netbeans.org/bugzilla/show_bug.cgi?id=245522">NB Issue 245522</a>: Instrumented CPU profiling fails on JDK7u65 with -target >=1.7
+                    </li>
+                    
                     <li><a href="http://java.net/jira/browse/VISUALVM-148">Issue 148</a>: VisualVM hangs when lost remote connection
                     </li>
 
