--- a/www/releases.html
+++ b/www/releases.html
@@ -94,6 +94,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 8 Update 25</b><br><small style="margin-left: 10px;">Released: Oct 14th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/8u25-relnotes-2296185.html">Release Notes</a></small></div>
+                            <hr>
                                 <div><b>JDK 8 Update 20</b><br><small style="margin-left: 10px;">Released: Aug 19th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/8u20-relnotes-2257729.html">Release Notes</a></small></div>
                             </td>
                         </tr>
@@ -104,6 +106,10 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 72</b><br><small style="margin-left: 10px;">Released: Oct 14th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/7u72-relnotes-2296190.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 7 Update 71</b><br><small style="margin-left: 10px;">Released: Oct 14th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/7u71-relnotes-2296187.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 7 Update 67</b><br><small style="margin-left: 10px;">Released: Aug 4th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/7u67-relnotes-2251330.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 7 Update 65</b><br><small style="margin-left: 10px;">Released: Jul 15th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/7u65-relnotes-2229169.html">Release Notes</a></small></div>
