--- a/www/releases.html
+++ b/www/releases.html
@@ -84,7 +84,7 @@
                             </td>
 
                             <td>
-                                <div>not released yet</div>
+                                <div><b>JDK 8 Update 40</b><br><small style="margin-left: 10px;">Released: Mar 3rd, 2015, <a href="http://www.oracle.com/technetwork/java/javase/8u40-relnotes-2389089.html">Release Notes</a></small></div>
                             </td>
                         </tr>
                         
