--- a/www/releases.html
+++ b/www/releases.html
@@ -106,6 +106,10 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 76</b><br><small style="margin-left: 10px;">Released: Jan 20th, 2015, <a href="http://www.oracle.com/technetwork/java/javase/7u76-relnotes-2389087.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 7 Update 75</b><br><small style="margin-left: 10px;">Released: Jan 20th, 2015, <a href="http://www.oracle.com/technetwork/java/javase/7u75-relnotes-2389086.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 7 Update 72</b><br><small style="margin-left: 10px;">Released: Oct 14th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/7u72-relnotes-2296190.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 7 Update 71</b><br><small style="margin-left: 10px;">Released: Oct 14th, 2014, <a href="http://www.oracle.com/technetwork/java/javase/7u71-relnotes-2296187.html">Release Notes</a></small></div>
